Look and Feel Plugin Change Log
===============================

1.1
===

Enhancements
------------
- New setting to allow a Look and Feel to set the window border and titlebar.
- JGoodies Looks upgraded to 2.1pre4.
- Skin Look and Feel upgraded to 6.7.
- InfoNode Look and Feel 1.4 added.
- Nimrod Look and Feel 0.94 added.
- Tonic Look and Feel 1.0.5 added.
- Napkin Look and Feel 1.0 added.
- Tiny Look and Feel 1.3.04 added.
- More Skin theme packs added.

Bug Fixes
---------
- 1596651 - Changing a Skin LAF theme required a restart of SQuirreL


0.32

====

Enhancements
------------
- Kunststoff Look and Feel upgraded to 2.0.2.
- Skin Look and Feel upgraded to 1.2.9.
- JGoodies Plastic replaced by JGoodies Look and Feel 1.1.3.



Bug Fixes
---------
- Upgrading the Skin Look and Feel to 1.2.9 fixed a problem with SQuirreL
  sometimes locking when started up using the Skin Look and Feel.


0.31
====

Bug Fixes
---------
- the default Metal Theme (Steel) can now be specified.


0.30
====

Enhancements
------------
- Improved plugin startup time.
- Skin Look and Feel updated to 1.2.3.
- Now supports themes for the Metal Look and Feel.
- Plastic Look and Feel added.



Bug Fixes
---------
- If a themepack/skin hasn't been specified then
  default to the first one in the dropdown in the
  preferences dialog.
- Only change the current Look and Feel when
  a new Look and Feel is actually selected in
  the preferences dialog.


Other
-----
- Display the licences for all the supplied Look and Feel
  implementations in the Licence menu option.


0.22
====

Other
-----
- Updated for SQuirreL 1.1beta6.


0.21
====


Enhancements
------------
- Metouia Look and Feel added.
- Can now select themes for the OYOAHA Look and Feel.
- Only show Skin Look and Feel configuration controls in the
  preferences panel if the Skin Look and Feel is selected.

Bug Fixes
---------
- Add missing Gradient theme file for the Oyoaha L&F.

0.12
====

Enhancements
------------